# thread_supervisor

./: .fpm  .gitmodules  CHANGELOG.md  CMakeLists.txt  GNUmakefile  Makefile  README.md  package.xml
.github/workflows/: master.yml  tag.yml
.make/: common.mk  thread_supervisor.mk
cmake/: options_deb.cmake  options_test.cmake
doc/: Doxyfile  doxygen_pages.dox
doxygen/: CHANGELOG.html  CHANGELOG_8md.html  DEMO.html  LICENSE.html  LICENSE_source.html  README_8md.html  annotated.html  classanonymous__namespace_02supervisor_8cpp_03_1_1TestThreadSupervisor-members.html  classanonymous__namespace_02supervisor_8cpp_03_1_1TestThreadSupervisor.html  classes.html  classt__Logger.html  classtut_1_1log_1_1StdErr-members.html  classtut_1_1log_1_1StdErr.html  classtut_1_1thread_1_1InheritableSupervisor-members.html  classtut_1_1thread_1_1InheritableSupervisor.html  classtut_1_1thread_1_1Parameters-members.html  classtut_1_1thread_1_1Parameters.html  classtut_1_1thread_1_1Parameters_1_1Restart-members.html  classtut_1_1thread_1_1Parameters_1_1Restart.html  classtut_1_1thread_1_1Parameters_1_1Scheduling-members.html  classtut_1_1thread_1_1Parameters_1_1Scheduling.html  classtut_1_1thread_1_1Supervisor-members.html  classtut_1_1thread_1_1Supervisor.html  classtut_1_1thread_1_1Thread-members.html  classtut_1_1thread_1_1Thread.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_57671aa3f4fef463e1ec89508f9e6371.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  doxygen__pages_8dox.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  (+18 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+27 more)
include/thread_supervisor/: supervisor.h  util.h
qa/: scspell.dict
test/: CMakeLists.txt  supervisor.cpp
test/cmake/: tut_add_test.cmake
