<?xml version="1.0"?>
<package format="2">
    <name>thread_supervisor</name>
    <version>1.0.0</version>
    <description>Thread supervisor</description>
    <maintainer email="alexander@sherikov.net">Alexander Sherikov</maintainer>
    <author email="alexander@sherikov.net">Alexander Sherikov</author>
    <license>Apache 2.0</license>
    <buildtool_depend>catkin</buildtool_depend>
    <export>
        <build_type>cmake</build_type>
    </export>
</package>
